--- a/Main-Task/index.html
+++ b/Main-Task/index.html
@@ -13,11 +13,15 @@
     <title>Task 05-10-22</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-dark">
-      <div class="container w-75">
+    <nav class="navbar px-lg-5 navbar-expand-lg bg-dark">
+      <div class="container-fluid  ">
         <a class="navbar-brand fw-bold text-white" href="#">Start BootStrap</a>
 
-        <div class=" " id="navbarSupportedContent">
+        <button class="navbar-toggler text-bg-light " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="navbar-toggler-icon"></i>
+        </button>
+
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -46,9 +50,9 @@
 
     <main>
       <section>
-        <div class="container w-75">
+        <div class="container px-lg-5 ">
           <div class="mt-5 d-flex row">
-            <div class="col-7 rounded">
+            <div class="col-lg-7 col-md-12 rounded">
               <img
                 src="https://dummyimage.com/900x400/dee2e6/6c757d.jpg "
                 alt=""
@@ -56,7 +60,7 @@
               />
             </div>
             <div
-              class="p-4 rounded col-5 h-auto d-flex flex-column justify-content-center"
+              class="p-4 rounded col-lg-5 col-md-12 h-auto d-flex flex-column justify-content-center"
             >
               <h1>Business Name or Tagline</h1>
 
@@ -82,25 +86,25 @@
         </div>
       </section>
       <section id="cards ">
-        <div class="container w-75 mt-5 row justify-content-between    mx-auto">
-            <div class="col-4 p-0">
+        <div class=" container px-lg-5 mt-5 row  justify-content-between  px-lg-5  mx-auto">
+          <div class=" col-md-4 col-sm-12 p-0">
 
-                 <div class="card mb-5 col-11   ">
-            <div class="card-body col-11 m-auto">
-              <h1>Card One</h1>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem
-                magni quas ex numquam, maxime minus quam molestias corporis
-                quod, ea minima accusamus.
-              </p>
-            </div>
-            <div class="card-footer">
-                <button class="btn btn-primary">More Info</button>
-            </div>
-          </div> 
-            </div>
+            <div class="card mb-5 col-11 m-auto ">
+       <div class="card-body col-11 m-auto">
+         <h1>Card One</h1>
+         <p>
+           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem
+           magni quas ex numquam, maxime minus quam molestias corporis
+           quod, ea minima accusamus.
+         </p>
+       </div>
+       <div class="card-footer">
+           <button class="btn btn-primary">More Info</button>
+       </div>
+     </div> 
+         </div>
 
-            <div class="col-4 p-0">
+            <div class=" col-md-4 col-sm-12  p-0">
 
                 <div class="card mb-5 col-11 m-auto ">
            <div class="card-body col-11 m-auto">
@@ -117,7 +121,7 @@
          </div> 
            </div>
 
-           <div class="col-4 p-0">
+           <div class=" col-md-4 col-sm-12 p-0">
 
             <div class="card mb-5 col-11 m-auto ">
        <div class="card-body col-11 m-auto">
